--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,8 +5,7 @@
 $red: #e20001;
 $black: #191919;
 
-body,
-html {
+body {
   background-color: #f6f6f6;
   font-family: "Montserrat", "Segoe UI", Tahoma, Verdana, sans-serif;
   overflow-x: hidden;
